(PC-24057)[PRO] fix: add classname for buttonLink and apply icon alignment only for ternary and button link

--- a/pro/src/ui-kit/Button/Button.module.scss
+++ b/pro/src/ui-kit/Button/Button.module.scss
@@ -140,7 +140,7 @@
     }
   }
 
-  &-ternary {
+  &-link.button-ternary {
     .button-icon {
       margin-bottom: auto;
     }
